--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Form elements - jQuery Mobile Demos</title>
-		<link rel="stylesheet" href="../css/themes/default/jquery.mobile-1.4.5.min.css">
-		<link rel="stylesheet" href="../assets/css/jqm.css">
-		<link rel="shortcut icon" href="../favicon.ico">
+		<link rel="stylesheet" href="./css/themes/default/jquery.mobile-1.4.5.min.css">
+		<link rel="stylesheet" href="./assets/css/jqm.css">
+		<link rel="shortcut icon" href="./favicon.ico">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-		<script src="../js/jquery.js"></script>
-		<script src="../assets/js/index.js"></script>
-		<script src="../js/jquery.mobile-1.4.5.min.js"></script>
+		<script src="./js/jquery.js"></script>
+		<script src="./assets/js/index.js"></script>
+		<script src="./js/jquery.mobile-1.4.5.min.js"></script>
 	</head>
 	<body>
 		<div data-role="page" class="jqm-demos" data-quicklinks="true">
 
 			<div data-role="header" class="jqm-header">
-				<h2><a href="../" title="jQuery Mobile Demos home"><img src="../assets/img/scaruffi.png" alt="jQuery Mobile"></a></h2>
+				<h2><a href="./" title="jQuery Mobile Demos home"><img src="./assets/img/scaruffi.png" alt="jQuery Mobile"></a></h2>
 				</div><!-- /header -->
 
 			<div role="main" class="ui-content jqm-content">
