--- a/index.html
+++ b/index.html
@@ -64,27 +64,6 @@
 <script language="javascript">
 
 
-function checkPassword(Usr, Pwd){
-
-	var tableId = "1seiYS61e_U8ZBaZlBtcTsEFTp-MAv1WtJ-855z2t";
-	var apiKey = "AIzaSyD8-PNgQ-IAE-scMuMV08McrQYtL2kIqq0";
-	var sSql =  "SELECT%20*%20FROM%20"+ tableId +" where ucase(Username) =ucase('"+ Usr +"') and Password = '"+ Pwd +"'&key=" + apiKey;
-	var queryurl = "https://www.googleapis.com/fusiontables/v1/query/?sql="+ sSql;
-
-	$.getJSON( queryurl, function( data ) {
-		if (data.rows == undefined){
-			alert("Username o password errate");
-			return false;
-		}	
-		else
-		{
-			alert("login avvenuto con successo");
-			$('#loginForm').submit();
-		}
-	});
-
-	
-}    	
 	function query(){
     querytail = "&jsonCallback=?";
 	
@@ -101,7 +80,7 @@ $('#loginForm').submit(function(e) {
 	e.preventDefault();
 	var tableId = "1seiYS61e_U8ZBaZlBtcTsEFTp-MAv1WtJ-855z2t";
 	var apiKey = "AIzaSyD8-PNgQ-IAE-scMuMV08McrQYtL2kIqq0";
-	var sSql =  "SELECT%20*%20FROM%20"+ tableId +" where Username ='"+ $('#Username').val() +"' and Password = '"+ $('#Password').val() +"'&key=" + apiKey;
+	var sSql =  "SELECT%20*%20FROM%20"+ tableId +" where Username = '"+ $('#Username').val().toLowerCase() +"' and Password = '"+ $('#Password').val() +"'&key=" + apiKey;
 	var queryurl = "https://www.googleapis.com/fusiontables/v1/query/?sql="+ sSql;
 
 	$.getJSON( queryurl, function( data ) {
