commentato pulsante cambia password

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
 
 							<label for="Password">Password:</label>
 							<input type="password" required name="Password" id="Password" value="" autocomplete="off">
-							<button class="ui-shadow ui-btn ui-corner-all" onclick="window.location.href='./SceltaPanini.html?test=sara'" >Cambia Password</button>
+
 							<button class="ui-shadow ui-btn ui-corner-all" >Login</button>
-						</div><!-- /demo-html -->
+							<!--<button class="ui-shadow ui-btn ui-corner-all" onclick="window.location.href='./SceltaPanini.html?test=sara'" >Cambia Password</button>-->
+							</div><!-- /demo-html -->
 					</form>
 				</div>
 				<div id="sceltaPanini">
