--- a/index.html
+++ b/index.html
@@ -11,6 +11,38 @@
 		<script src="./js/jquery.js"></script>
 		<script src="./assets/js/index.js"></script>
 		<script src="./js/jquery.mobile-1.4.5.min.js"></script>
+		
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
+<script type="text/javascript" src="https://apis.google.com/js/client.js"></script>
+    <script type="text/javascript">
+        function auth() {
+		debugger
+            var config = {
+                'client_id': '293590021422-g899ro91b6hfg1tkg9q1f51tipekid90.apps.googleusercontent.com',
+                'scope': 'https://www.googleapis.com/auth/fusiontables',
+                'immediate': false
+            };
+            gapi.auth.authorize(config, function () {
+                console.log('login complete');
+                console.log(gapi.auth.getToken());
+            });
+        }
+        function insert_row() {
+            gapi.client.setApiKey('AIzaSyD8-PNgQ-IAE-scMuMV08McrQYtL2kIqq0');
+
+            gapi.client.load('fusiontables', 'v1', function () {                
+                var i;
+                for (i = 0; i < 32; i++) {
+                    var query = "INSERT INTO 1pXmSJI53G1eS8eMBksdPF_f3QleXwnEbbQW0hGT6(col0,col1,col2) VALUES ('a','a', 'a')"; 
+                    gapi.client.fusiontables.query.sql({ sql: query }).execute(
+					function (response) { console.log(response); });
+                }
+            });
+        }
+    </script>
+
+
+
 	</head>
 	<body>
 		<div data-role="page" class="jqm-demos" data-quicklinks="true">
@@ -36,7 +68,14 @@
 							<button class="ui-shadow ui-btn ui-corner-all" >Login</button>
 							<!--<button class="ui-shadow ui-btn ui-corner-all" onclick="window.location.href='./SceltaPanini.html?test=sara'" >Cambia Password</button>-->
 							</div><!-- /demo-html -->
+
 					</form>
+					<button onclick="auth();">Authorize</button>
+					<br />
+					<button onclick="insert_row();">Insert Data</button>
+					<br />
+					<button onclick="showMap();">Show Map</button>
+
 				</div>
 				<div id="sceltaPanini">
 					<h1>Scelta Merende:</h1>
