--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="google-site-verification" content="Uj7KUjZeJk7udEvuMw2IARbnOyZEoQKfECcyyNqdJE8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Form elements - jQuery Mobile Demos</title>
 		<link rel="stylesheet" href="./css/themes/default/jquery.mobile-1.4.5.min.css">
