--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ $('#loginForm').submit(function(e) {
 
 $('#sceltaForm').submit(function(e) {
 	auth();
-	
+	debugger
     var d = new Date();
 	var MM = (d.getMonth()+1).toString();
 	var YY = (d.getFullYear()).toString();
@@ -153,9 +153,8 @@ $('#sceltaForm').submit(function(e) {
 	var day = MM + "/" + dd + "/" + YY;
 	gapi.client.setApiKey('AIzaSyD8-PNgQ-IAE-scMuMV08McrQYtL2kIqq0');
 	gapi.client.load('fusiontables', 'v1', function () {                
-		var query = "INSERT INTO 1pXmSJI53G1eS8eMBksdPF_f3QleXwnEbbQW0hGT6(CLASSE,NOME,COGNOME,SCELTA) " +
-		" VALUES ('" + getData("Classe") + "','" + getData("Nome")+"', '"+ getData("Cognome")+"','"+ $('#listaMerende').find(":selected").text();+ "')"; 
-		debugger;
+		var query = "INSERT INTO 1pXmSJI53G1eS8eMBksdPF_f3QleXwnEbbQW0hGT6(CLASSE,NOME,COGNOME,SCELTA,DATA) " +
+		" VALUES ('" + getData("Classe") + "','" + getData("Nome")+"', '"+ getData("Cognome")+"','"+ $('#listaMerende').find(":selected").text() + "','" + day + "')"; 
 		gapi.client.fusiontables.query.sql({ sql: query }).execute(
 		function (response) { console.log(response); });
      });
