--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@ function getData(requestName){
 
 //Funzione eseguite al caricamento della pagina//
 $(document).ready(function(){
+	$("#contentTable" ).remove();
 
 	switch (sessionStorage.Page){
 		case "sceltaPanini":
@@ -201,7 +202,7 @@ function caricaListaPaniniClasse(){
 			var htmlList; 
 			htmlList ="";
 				
-			htmlList += "<div style='overflow:auto;'  class='ui-content jqm-content'>"
+			htmlList += "<div id ='contentTable' style='overflow:auto;'  class='ui-content jqm-content'>"
 			htmlList +="	<h1>Lista Panini per la classe " + sessionStorage.Classe + "</h1>";
 						
 			htmlList += '<table data-role="table" data-mode="column" class="ui-body-d ui-shadow table-stripe ui-responsive"' +
