--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				</div><!-- /header -->
 
 			<div role="main"  class="ui-content jqm-content">
-			    <button id="logOut"  data-inline="true"  class="ui-btn ui-icon-delete ui-btn-icon-left ui-btn-inline ui-shadow ui-corner-all" onclick="goToPage('login)">Esci</button>
+			    <button id="logOut"  data-inline="true"  class="ui-btn ui-icon-delete ui-btn-icon-left ui-btn-inline ui-shadow ui-corner-all" onclick="goToPage('login')">Esci</button>
 				<button id="tornaHome"  data-inline="true"  class="ui-btn ui-icon-home ui-btn-icon-left ui-btn-inline ui-shadow ui-corner-all" onclick="goToPage('sceltaAzione')">Indietro</button>
 				<div id="login">
 					<h1>Lista Panini</h1>
