--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 		<script src="./assets/js/index.js"></script>
 		<script src="./js/jquery.mobile-1.4.5.min.js"></script>
 		
-	<script type="text/javascript" src="https://apis.google.com/js/client.js"></script>
+<script type="text/javascript" src="https://apis.google.com/js/client.js"></script>
     <script type="text/javascript">
-       
     </script>
 
 
@@ -86,7 +85,39 @@
 <script language="javascript">
 
 
+$('#loginForm').submit(function(e) {
+	e.preventDefault();
+	var tableId = "1seiYS61e_U8ZBaZlBtcTsEFTp-MAv1WtJ-855z2t";
+	var apiKey = "AIzaSyD8-PNgQ-IAE-scMuMV08McrQYtL2kIqq0";
+	var sSql =  "SELECT%20*%20FROM%20"+ tableId +" where Username = '"+ $('#Username').val().toLowerCase() +"' and Password = '"+ $('#Password').val() +"'&key=" + apiKey;
+	var queryurl = "https://www.googleapis.com/fusiontables/v1/query/?sql="+ sSql;
 
+	$.getJSON( queryurl, function( data ) {
+		if (data.rows == undefined){
+			alert("Username o password errate");
+			return false;
+		}	
+		else
+		{
+			alert("login avvenuto con successo");
+			sessionStorage.Nome  = data.rows[0][3];
+			sessionStorage.Cognome  = data.rows[0][4];
+			sessionStorage.Classe  = data.rows[0][5];
+			sessionStorage.Login = true;
+			goToPage("sceltaAzione");
+			
+		}
+	})
+
+	return false;
+});
+
+$('#sceltaForm').submit(function(e) {
+   	auth();
+    insertData()
+
+	return false;
+});
 //prende i dati passati in GET//
 function getData(requestName){
 	if (requestName = (new RegExp('[?&]'+encodeURIComponent(requestName)+'=([^&]*)')).exec(location.search))
