--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ $('#loginForm').submit(function(e) {
 });
 
 $('#sceltaForm').submit(function(e) {
-   	insertData()
+   	auth();
+    insertData()
 
 	return false;
 });
@@ -129,7 +130,6 @@ $(document).ready(function(){
 	$("#contentTable" ).remove();
 	switch (sessionStorage.Page){
 		case "sceltaPanini":
-			auth()
 			$("#login").css("display", "none");
 			$("#listaPanini").css("display", "none");
 			$("#sceltaAzione").css("display", "none");
